# agentic-dev-exp-repo1

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md
.agent-config/: AGENT_RULES.md  prompt-injection-defenses.md  security-boundaries.md
.agent-config/scoring/: rubric.md  self-score.md
.claude/: settings.json
.github/: copilot-instructions.md
docs/agentic-development/: CONCEPTS.md  OVERVIEW.md  SETUP_GUIDE.md  WORKFLOW_FOR_AGENTS.md
docs/architecture/: ADR-001-zero-dependency-core.md  ADR-002-rust-ui-via-jni.md  ADR-003-rank-fusion-strategy.md
docs/human-learning/: JAVA21_FOR_RERANKING.md  RANK_FUSION_AND_HYBRID_SEARCH.md  RERANKING_FUNDAMENTALS.md  SPEC_MAINTENANCE_GUIDE.md
docs/specs/: ACCEPTANCE_CRITERIA_TEMPLATE.md  SPEC_TEMPLATE.md  TEST_REQUIREMENTS_TEMPLATE.md
metrics/: project-health.md
reranker-core/: build.gradle  settings.gradle
reranker-ui/: Cargo.toml
reranker-ui/src/: bridge.rs  main.rs  model.rs  ui.rs
specs/acceptance-criteria/: 001-core-data-model-criteria.md  002-standard-tokenizer-criteria.md  005-rank-fusion-criteria.md  006-llm-reranking-criteria.md
specs/features/: 001-core-data-model.md  002-standard-tokenizer.md  003-bm25-scorer.md  004-rerank-pipeline.md  005-rank-fusion.md  006-llm-reranking.md  007-cosine-similarity-scorer.md
specs/test-requirements/: 001-core-data-model-tests.md  002-standard-tokenizer-tests.md  003-bm25-scorer-tests.md  004-rerank-pipeline-tests.md  005-rank-fusion-tests.md  006-llm-reranking-tests.md  007-cosine-similarity-scorer-tests.md
tracking/: README.md
(+73 files in other folders)
