[package]
name = "reranker-ui"
version = "0.1.0"
edition = "2024"
description = "Rust UI layer for testing the ReRanker Java library"

[dependencies]
jni = "0.21"
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
